# epic-cli

./: .gitignore  .travis.yml  Epic_CLI.py  LICENSE  README.md  epic.py  epiccli.py  pytest.ini  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: requirements.txt
docs/source/: commands.rst  conf.py  data.rst  faq.rst  getting_started.rst  index.rst
epic-cli/: Epic_CLI.py  requirements.txt
epiccli/: cli.py  core.py  exceptions.py  path.py  urls.py
legacy/: Epic_CLI.py
pyepic/: core.py  exceptions.py  urls.py
