[metadata]
name = epiccli
description = "A command line interface for EPIC HPC"
author = "Zenotech Ltd"
author_email = "support@zenotech.com"
Home-page = https://github.com/zenotech/epic-cli
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
install_requires =
    pyepic>=1.0.4
    Click
    pyfiglet

[options.entry_points]
console_scripts =
    epic = epiccli.cli:main